feat: implementação método ListarPacientes para listar a fila dos pacientes com base na prioridade